--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,29 +2,30 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/drawerlayout"
     tools:context=".Home_Activity"
     tools:openDrawer="start">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolBar"
-                app:title="Home"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="#93242A"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                />
+                app:title="Home" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <LinearLayout
@@ -33,34 +34,36 @@
             android:background="@drawable/background">
 
         </LinearLayout>
+
         <Button
-            android:visibility="gone"
             android:id="@+id/btnssdigiao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sẵn sàn đi giao"/>
+            android:text="Sẵn sàn đi giao"
+            android:visibility="gone" />
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
                     <androidx.cardview.widget.CardView
-                        android:layout_margin="10dp"
+                        android:id="@+id/danhsach"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
-                        android:layout_weight="1"
-                        app:cardCornerRadius="20dp"
+                        android:layout_margin="10dp"
                         android:layout_marginTop="20dp"
-                        android:id="@+id/danhsach"
-                        >
+                        android:layout_weight="1"
+                        app:cardCornerRadius="20dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -69,18 +72,17 @@
                             android:orientation="vertical">
 
                             <ImageView
-                                android:layout_marginTop="5dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:src="@drawable/ic_baseline_assignment_24"
-                                />
+                                android:layout_marginTop="5dp"
+                                android:src="@drawable/ic_baseline_assignment_24" />
 
                             <TextView
-                                android:layout_marginTop="-5dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="66dp"
                                 android:layout_gravity="center"
+                                android:layout_marginTop="-5dp"
                                 android:gravity="center"
                                 android:text="Danh sách
                     đơn hàng"
@@ -93,21 +95,19 @@
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/lichsu"
-                        android:layout_margin="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
-                        android:layout_weight="1"
-                        app:cardCornerRadius="20dp"
+                        android:layout_margin="10dp"
                         android:layout_marginTop="20dp"
-                        >
+                        android:layout_weight="1"
+                        app:cardCornerRadius="20dp">
 
                         <LinearLayout
                             android:id="@+id/lnLichsudonhang"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:background="@drawable/backgroundlichsu"
-                            >
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -117,10 +117,10 @@
                                 android:src="@drawable/ic_baseline_access_time_24" />
 
                             <TextView
-                                android:layout_marginTop="-5dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="66dp"
                                 android:layout_gravity="center"
+                                android:layout_marginTop="-5dp"
                                 android:gravity="center"
                                 android:text="Lịch sử giao hàng"
                                 android:textColor="@color/white"
@@ -131,22 +131,22 @@
                     </androidx.cardview.widget.CardView>
 
 
-
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
                     <androidx.cardview.widget.CardView
-                        android:layout_margin="10dp"
+                        android:id="@+id/thongtincanhan"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
+                        android:layout_margin="10dp"
+                        android:layout_marginTop="20dp"
                         android:layout_weight="1"
                         android:backgroundTint="#10FA19"
-                        app:cardCornerRadius="20dp"
-                        android:layout_marginTop="20dp"
-                        android:id="@+id/thongtincanhan"
-                        >
+                        app:cardCornerRadius="20dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -177,19 +177,18 @@
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/doanhthu"
-                        android:layout_margin="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
+                        android:layout_margin="10dp"
+                        android:layout_marginTop="20dp"
                         android:layout_weight="1"
                         android:backgroundTint="#EA663C"
-                        app:cardCornerRadius="20dp"
-                        android:layout_marginTop="20dp"
-                        >
+                        app:cardCornerRadius="20dp">
 
                         <LinearLayout
-                            android:background="@drawable/backgrounddoanhthu"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:background="@drawable/backgrounddoanhthu"
                             android:orientation="vertical">
 
                             <ImageView
@@ -200,10 +199,10 @@
                                 android:src="@drawable/ic_baseline_trending_up_24" />
 
                             <TextView
-                                android:layout_marginTop="-5dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="66dp"
                                 android:layout_gravity="center"
+                                android:layout_marginTop="-5dp"
                                 android:gravity="center"
                                 android:text="Doanh thu"
                                 android:textColor="@color/white"
@@ -214,8 +213,8 @@
                     </androidx.cardview.widget.CardView>
 
 
-
                 </LinearLayout>
+
 
 
             </LinearLayout>
@@ -223,16 +222,16 @@
 
 
         <FrameLayout
+            android:id="@+id/contentfram"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/contentfram"/>
+            android:layout_height="match_parent" />
     </LinearLayout>
+
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/navigationView"
-        app:headerLayout="@layout/layoutheader"
-        app:menu="@menu/menu_navigation"
         android:layout_gravity="start"
-        />
+        app:headerLayout="@layout/layoutheader"
+        app:menu="@menu/menu_navigation" />
 </androidx.drawerlayout.widget.DrawerLayout>
