--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="madh">#ED2A1C</color>
     <color name="tuchoidon">#BA8C89</color>
     <color name="colorbtn">#FF9900</color>
+    <color name="green">#06BF0F</color>
 </resources>
