--- a/app/src/main/res/layout/activity_danh_sach_don_hang.xml
+++ b/app/src/main/res/layout/activity_danh_sach_don_hang.xml
@@ -28,6 +28,17 @@
             android:textStyle="bold"
             android:textColor="@color/white" />
     </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
+    </LinearLayout>
     <FrameLayout
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
