--- a/app/src/main/res/layout/itemdonhang.xml
+++ b/app/src/main/res/layout/itemdonhang.xml
@@ -9,6 +9,19 @@
     android:id="@+id/lndonhang"
     android:layout_margin="10dp"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#BE41D3"
+        >
+        <TextView
+            android:id="@+id/trangthai"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Trạng Thái"
+            android:textStyle="bold"
+            android:textSize="15dp"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
