--- a/app/src/main/res/drawable/backgrounddoanhthu.xml
+++ b/app/src/main/res/drawable/backgrounddoanhthu.xml
@@ -3,6 +3,6 @@
     <gradient
         android:type="linear"
         android:angle="90"
-        android:startColor="#651FFF"
-        android:endColor="#F3F6F0" />
+        android:startColor="#673AB7"
+        android:endColor="#C8B0FD" />
 </shape>
