--- a/app/src/main/res/drawable/backgroundlichsu.xml
+++ b/app/src/main/res/drawable/backgroundlichsu.xml
@@ -3,6 +3,6 @@
     <gradient
         android:type="linear"
         android:angle="90"
-        android:startColor="#FFC400"
-        android:endColor="#07F8F8" />
+        android:endColor="#FFF7AD"
+        android:startColor="#8E8220" />
 </shape>
