--- a/app/src/main/res/drawable/backgroundthongtin.xml
+++ b/app/src/main/res/drawable/backgroundthongtin.xml
@@ -4,6 +4,5 @@
         android:type="linear"
         android:angle="90"
         android:startColor="#DA3806"
-        android:centerColor="#DCD04E"
-        android:endColor="#F8F8F5" />
+        android:endColor="#CC8A76" />
 </shape>
