--- a/app/src/main/res/layout/activity_thong_ke.xml
+++ b/app/src/main/res/layout/activity_thong_ke.xml
@@ -60,7 +60,8 @@
                 <FrameLayout
                     android:id="@+id/frameLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="450dp"/>
+                    android:layout_height="450dp"
+                    android:layout_marginBottom="20dp"/>
 
                 <LinearLayout
                     android:gravity="center"
