--- a/app/src/main/res/layout/itemthongbao.xml
+++ b/app/src/main/res/layout/itemthongbao.xml
@@ -18,15 +18,25 @@
             android:layout_height="wrap_content"
             android:background="#CAC9C9"
             android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/image_notification"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginLeft="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/baseline_image_black_48dp" />
-
+            <FrameLayout
+                android:layout_width="80dp"
+                android:layout_height="80dp">
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/image_notification_new"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    app:lottie_url="https://assets9.lottiefiles.com/packages/lf20_daV8h3.json"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"/>
+                <ImageView
+                    android:layout_gravity="center"
+                    android:id="@+id/image_notification"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginLeft="5dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/bell_adobespark" />
+            </FrameLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -36,7 +46,7 @@
                     android:id="@+id/tv_TieuDe_ThongBao"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
+                    android:layout_margin="2dp"
                     android:gravity="center"
                     android:text="Tiêu đề"
                     android:textSize="16dp"
@@ -46,7 +56,7 @@
                     android:id="@+id/tv_NoiDung_ThongBao"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
+                    android:layout_margin="2dp"
                     android:gravity="center"
                     android:text="Nội dung thông báo"
                     android:textSize="16dp" />
@@ -55,7 +65,7 @@
                     android:id="@+id/tv_ThoiGian_ThongBao"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
+                    android:layout_margin="2dp"
                     android:gravity="center"
                     android:text="Ngày thông báo"
                     android:textSize="16dp" />
