--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_danhsachdonhang"
@@ -18,8 +19,10 @@
             android:icon="@drawable/ic_baseline_trending_up_24"
             android:title="@string/doanhthu" />
         <item
+
             android:id="@+id/thongbao"
             android:icon="@drawable/ic_baseline_notifications_24"
+            app:actionLayout="@layout/menu_counter"
             android:title="@string/thong_bao" />
         <item
             android:id="@+id/doimatkhau"
