--- a/app/src/main/res/layout/activity_danh_sach_don_hang.xml
+++ b/app/src/main/res/layout/activity_danh_sach_don_hang.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/ic_baseline_back"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="15dp"
             />
         <TextView
             android:id="@+id/tvDanhSach"
@@ -24,13 +24,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Danh sách đơn hàng"
-            android:textSize="22dp"
-            android:textStyle="bold"
+            android:textSize="20dp"
+
             android:textColor="@color/white" />
     </FrameLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@drawable/botronsp"
         >
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
