--- a/app/src/main/res/layout/activity_lichsugiaohang.xml
+++ b/app/src/main/res/layout/activity_lichsugiaohang.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/ic_baseline_back"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="15dp"
             />
         <TextView
             android:id="@+id/tvDanhSach"
@@ -24,16 +24,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Danh sách đơn hàng"
-            android:textSize="22dp"
-            android:textStyle="bold"
+            android:textSize="20dp"
+
             android:textColor="@color/white" />
     </FrameLayout>
 
     <LinearLayout
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/botronsp"
         >
         <androidx.appcompat.widget.SearchView
+
             android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,7 +44,7 @@
             android:layout_marginRight="10dp"/>
     </LinearLayout>
     <FrameLayout
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
@@ -49,7 +52,8 @@
             android:background="@drawable/botronsp"
             android:id="@+id/lichsu"
             android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
             android:entries="@array/lichsu"
             android:layout_height="35dp"/>
     </FrameLayout>
