--- a/app/src/main/res/layout/activity_thongtincanhan.xml
+++ b/app/src/main/res/layout/activity_thongtincanhan.xml
@@ -17,15 +17,15 @@
             android:layout_height="match_parent"
             android:src="@drawable/ic_baseline_back"
 
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="15dp"
             />
         <TextView
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Thông tin cá nhân"
-            android:textSize="22dp"
-            android:textStyle="bold"
+            android:textSize="20dp"
+
             android:textColor="@color/white" />
     </FrameLayout>
 <ScrollView
@@ -53,9 +53,10 @@
             android:layout_marginTop="-39dp"
             />
         <EditText
+            android:paddingLeft="10dp"
             android:id="@+id/hovaten"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:text="@string/hoten"
             android:background="@drawable/botron"
             android:layout_marginTop="30dp"
@@ -63,9 +64,11 @@
             android:layout_marginRight="30dp"
             />
         <EditText
+            android:paddingLeft="10dp"
+
             android:id="@+id/sodienthoai"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:text="@string/sdt"
             android:inputType="number"
             android:background="@drawable/botron"
@@ -74,9 +77,11 @@
             android:layout_marginRight="30dp"
             />
         <EditText
+            android:paddingLeft="10dp"
+
             android:id="@+id/email"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:text="@string/email"
             android:background="@drawable/botron"
             android:layout_marginTop="15dp"
@@ -84,9 +89,11 @@
             android:layout_marginRight="30dp"
             />
         <EditText
+            android:paddingLeft="10dp"
+
             android:id="@+id/ngaysinh"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:text="@string/ngaysinh"
             android:background="@drawable/botron"
             android:layout_marginTop="15dp"
@@ -95,9 +102,11 @@
             />
 
         <EditText
+            android:paddingLeft="10dp"
+
             android:id="@+id/diachi"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:text="@string/diachi"
             android:background="@drawable/botron"
             android:layout_marginTop="15dp"
@@ -105,9 +114,11 @@
             android:layout_marginRight="30dp"
             />
         <EditText
+            android:paddingLeft="10dp"
+
             android:id="@+id/bienso"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:text="@string/bienso"
             android:background="@drawable/botron"
             android:layout_marginTop="15dp"
@@ -121,11 +132,13 @@
             android:id="@+id/btnsave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Save"
+            android:text="Lưu"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
             android:background="@drawable/botronbtn"
             android:layout_gravity="center"
             android:layout_marginTop="35dp"
-
+            android:layout_marginBottom="10dp"
             />
     </LinearLayout>
 
