--- a/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
@@ -8,7 +8,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
         android:background="#93242A"
         android:orientation="horizontal">
@@ -17,7 +17,7 @@
             android:id="@+id/imgBack"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="5dp"
             android:src="@drawable/ic_baseline_back" />
 
         <TextView
@@ -27,8 +27,8 @@
             android:gravity="center"
             android:text="Chi tiết đơn hàng"
             android:textColor="@color/white"
-            android:textSize="20dp"
-             />
+            android:textSize="22dp"
+            android:textStyle="bold" />
     </FrameLayout>
 
     <ScrollView
@@ -282,8 +282,6 @@
                         android:visibility="gone" />
 
                     <Button
-                        android:layout_weight="1"
-
                         android:id="@+id/btnDaLayHang"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
@@ -296,36 +294,30 @@
                         android:visibility="gone" />
 
                     <Button
-                        android:layout_marginTop="-6dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_weight="1"
                         android:id="@+id/btnGiaoThanhCong"
-                        android:layout_width="match_parent"
+                        android:layout_width="180dp"
                         android:layout_height="50dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
                         android:background="@drawable/botronbtn"
                         android:text="Giao thành công"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:textSize="15dp"
-                         />
+                        android:visibility="gone" />
 
                     <Button
-                        android:layout_weight="1"
                         android:id="@+id/btnGiaoThatBai"
-                        android:layout_width="match_parent"
+                        android:layout_width="170dp"
                         android:layout_height="50dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginRight="15dp"
                         android:background="@drawable/botronbtnfail"
                         android:text="Giao thất bại"
                         android:textColor="@color/black"
                         android:textSize="15dp"
-                        />
+                        android:visibility="gone" />
 
                     <Button
                         android:id="@+id/btnDiGiao"
-                        android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginLeft="20dp"
@@ -375,7 +367,6 @@
 
                 <Button
                     android:id="@+id/btnGotoMap"
-                    android:layout_marginTop="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/botronbtn"
