--- a/app/src/main/res/layout/activity_thong_ke.xml
+++ b/app/src/main/res/layout/activity_thong_ke.xml
@@ -21,12 +21,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <LinearLayout
-
                 android:id="@+id/lnLayout"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <FrameLayout
+                    android:layout_gravity="center"
                     android:background="#93242A"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
@@ -36,16 +36,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:src="@drawable/ic_baseline_back"
-                        android:layout_marginTop="3dp"
-                        android:layout_marginLeft="15dp"
+
+                        android:layout_marginLeft="5dp"
                         />
                     <TextView
                         android:gravity="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="Thống kê"
-                        android:textSize="20dp"
-
+                        android:textSize="22dp"
+                        android:textStyle="bold"
                         android:textColor="@color/white" />
                 </FrameLayout>
                 <LinearLayout
