--- a/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
@@ -245,11 +245,10 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="5dp"
-                    android:drawableLeft="@drawable/ic_baseline_attach_money_24"
                     android:drawablePadding="5dp"
                     android:gravity="end"
                     android:text="Tổng đơn"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="25dp" />
 
                 <LinearLayout
@@ -265,7 +264,7 @@
                         android:layout_weight="1"
                         android:background="@drawable/botronbtn"
                         android:text="Nhận đơn"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="15dp"
                         android:visibility="gone" />
 
@@ -289,32 +288,32 @@
                         android:layout_marginRight="20dp"
                         android:background="@drawable/botronbtn"
                         android:text="Đã lấy hàng"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="15dp"
                         android:visibility="gone" />
 
                     <Button
+                        android:layout_weight="1"
                         android:id="@+id/btnGiaoThanhCong"
-                        android:layout_width="180dp"
+                        android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:background="@drawable/botronbtn"
                         android:text="Giao thành công"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="15dp"
-                        android:visibility="gone" />
+                         />
 
                     <Button
+                        android:layout_weight="1"
                         android:id="@+id/btnGiaoThatBai"
-                        android:layout_width="170dp"
+                        android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:layout_marginHorizontal="20dp"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="15dp"
+                        android:layout_marginLeft="20dp"
                         android:background="@drawable/botronbtnfail"
                         android:text="Giao thất bại"
                         android:textColor="@color/black"
                         android:textSize="15dp"
-                        android:visibility="gone" />
+                        />
 
                     <Button
                         android:id="@+id/btnDiGiao"
@@ -324,7 +323,7 @@
                         android:layout_marginRight="20dp"
                         android:background="@drawable/botronbtn"
                         android:text="Đi Giao"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="15dp"
                         android:visibility="gone" />
 
@@ -336,7 +335,7 @@
                         android:layout_marginRight="20dp"
                         android:background="@drawable/botronbtn"
                         android:text="Đã chuyển tiền cho cửa hàng"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="15dp"
                         android:visibility="gone" />
 
@@ -348,7 +347,7 @@
                         android:layout_marginRight="20dp"
                         android:background="@drawable/botronbtn"
                         android:text="Đã trả hàng cho cửa hàng"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="15dp"
                         android:visibility="gone" />
 
@@ -366,14 +365,15 @@
                 </LinearLayout>
 
                 <Button
+                    android:layout_marginTop="5dp"
                     android:id="@+id/btnGotoMap"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/botronbtn"
                     android:text="Go to Maps"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="15dp"
-                    android:visibility="gone" />
+                     />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
